--- a/src/translations/hi.json
+++ b/src/translations/hi.json
@@ -13,6 +13,7 @@
 	"btn-logout": "लॉग आउट",
 	"label-Profile": "प्रोफ़ाइल",
 	"label-Projects": "परियोजनाओं",
+	"label-Create New Project": "नया प्रोजेक्ट बनाएं",
 	"label-personal-information": "व्यक्तिगत जानकारी",
 	"label-first-name": "पहला नाम",
 	"label-last-name": "अंतिम नाम",
