--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -14,6 +14,7 @@
 	"btn-logout": "Log out",
 	"label-Profile": "Profile",
 	"label-Projects": "Projects",
+	"label-Sync": "Sync",
 	"label-personal-information": "Personal Information",
 	"label-first-name": "First Name",
 	"label-last-name": "Last Name",
