--- a/renderer/src/translations/hi.json
+++ b/renderer/src/translations/hi.json
@@ -1,6 +1,6 @@
 {
   "label-translation": "अनुवाद",
-  "app-name": "Scripture Scribe",
+  "app-name": "Scribe Scripture",
   "btn-switch-off": "ऑफ़",
   "btn-switch-on": "ऑन",
   "btn-all": "सब",
