--- a/renderer/src/translations/ru.json
+++ b/renderer/src/translations/ru.json
@@ -1,6 +1,6 @@
 {
   "label-translation": "Перевод",
-  "app-name": "Scripture Scribe",
+  "app-name": "Scribe Scripture",
   "btn-switch-off": "ВЫКЛ",
   "btn-switch-on": "ВКЛ",
   "btn-all": "ВСЕ",
@@ -192,7 +192,7 @@
   "ref_name_blank": "Имя не должно быть пустым.",
   "dynamic-msg-save-language": "Изменения сохранены. Перезапустите приложение, чтобы изменения вступили в силу.",
   "dynamic-msg-offline": "Похоже, у вас нет рабочего подключения к Интернету для просмотра.<br /> Повторите попытку, когда подключитесь к Интернету.",
-  "label-auto-update-info": "Если это включено, это позволит приложению автоматически подключаться к Интернету (если доступно), загружать и после этого устанавливать обновления, выпущенные командой Autographa.",
+  "label-auto-update-info": "Если это включено, это позволит приложению автоматически подключаться к Интернету (если доступно), загружать и после этого устанавливать обновления, выпущенные командой Scribe.",
   "label-auto-update": "Автоматическое обновление",
   "label-radio-enable": "Включено",
   "label-radio-disable": "Отключено",
